# pdfrip

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/: build_and_test.yml
.github/workflows/: build_and_test.yml  ci.yml  release.yml
benches/: throughput.rs
crates/cli-interface/: Cargo.toml
crates/cli-interface/src/: arguments.rs  lib.rs
crates/cli-interface/src/banner/: mod.rs
crates/cracker/: Cargo.toml
crates/cracker/src/: lib.rs  verifier.rs
crates/cracker/tests/: prepared_verifier.rs
crates/cracker/tests/fixtures/: generate-verifier-fixtures.sh
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/producer/: Cargo.toml
crates/producer/src/: contains_word.rs  custom_query.rs  dates.rs  default_query.rs  dictionary.rs  lib.rs  mask.rs  number_ranges.rs
screenshots/: pdfrip.cast
src/: main.rs
src/cli/: banner  interface.rs  messages.rs  mod.rs
src/core/: cracker.rs  engine.rs  mod.rs  parsers.rs  production.rs
src/core/production/: custom_query.rs  dates.rs  default_query.rs  dictionary.rs  mod.rs  number_ranges.rs
tests/: alice.rs  contains-word.rs  datetime.rs  default-query.rs  mask.rs  password-output.rs  resume.rs
