[workspace]
members = [ "crates/cracker", "crates/engine","crates/producer"]

[workspace.package]
version = "2.0.1"
edition = "2021"
authors = ["Mufeed VH <mufeed@lyminal.space>", "Pommaq"]

[workspace.dependencies]
producer = {path="crates/producer"}
cracker = {path="crates/cracker"}
engine = {path="crates/engine"}

bytecount = "0.6.7"
log = "0.4.19"
pdf = "0.8.1"
anyhow = "1.0.72"
indicatif = "0.16.2"
crossbeam = "0.8.2"

[package]
name = "pdfrip"
version.workspace = true
edition.workspace = true
authors.workspace = true


[dependencies]
engine.workspace = true
anyhow.workspace = true
pretty_env_logger = "0.5.0"
colored = "2.0.4"
clap = { version = "4.4.13", features = ["derive"] }

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1
