[workspace]
members = [ "crates/cli-interface", "crates/cracker", "crates/engine","crates/producer"]

[workspace.package]
version = "3.0.0"
edition = "2021"
authors = ["Mufeed VH <mufeed@lyminal.space>", "Pommaq"]

[workspace.dependencies]
# First list our own crates here so others can simply
# use the workspace entry instead of depending on the path to
# these crates.
producer.path="crates/producer"
cracker.path="crates/cracker"
engine.path="crates/engine"
cli-interface.path="crates/cli-interface"

# We keep direct dependencies pinned exactly for reproducible release builds.
# Combined with Cargo.lock and `--locked` CI/install flows, this prevents the
# dependency drift that historically broke pdfrip builds.
bytecount = "=0.6.9"
log = "=0.4.19"
pdf = "=0.9.0"
anyhow = "=1.0.102"
indicatif = "=0.17.11"
crossbeam = "=0.8.4"
clap = { version = "=4.6.0", features = ["derive"] }
colored = "=2.2.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
ctrlc = "=3.5.2"
sha2 = "=0.10.9"
md5 = "=0.7.0"
stringprep = "=0.1.5"
aes = "=0.8.4"
cbc = "=0.1.2"


[package]
name = "pdfrip"
version.workspace = true
edition.workspace = true
authors.workspace = true


[dependencies]
cli-interface.workspace = true
anyhow.workspace = true
engine.workspace = true
ctrlc.workspace = true
pretty_env_logger = "=0.5.0"

[dev-dependencies]
cracker.workspace = true
pdf.workspace = true
criterion = "=0.5.1"

[[bench]]
name = "throughput"
harness = false

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1
