[package]
name = "cli-interface"
version.workspace = true
edition.workspace = true
authors.workspace = true


[dependencies]
clap.workspace = true
colored.workspace = true
engine.workspace = true
anyhow.workspace = true
indicatif.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
